# phantombuster-casestudy

./: .gitignore  README.md  ROADMAP.md  TIMELINE.md  pyproject.toml
churn_classification_engine/: config.py
churn_classification_engine/data/: get-data.py  split-data.py
churn_classification_engine/model/: evaluate.py  hyperparameters-tuning.py  predict-proba.py  train.py  utils.py
models/: calibrated_hist_gradient_boosting.pkl
notebooks/: 2_model-selection.ipynb  3-calibration.ipynb  3_calibration.ipynb  4-threshold-tuning.ipynb  4_threshold-tuning.ipynb  5-explainability.ipynb  5_explainability.ipynb
reports/: evaluation_report.html  evaluation_template.html  profiling_report.html  table_report.html
