[project]
name = "phantombuster-usecase"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "imbalanced-learn>=0.13.0",
    "jinja2>=3.1.6",
    "jupyter>=1.1.1",
    "loguru>=0.7.3",
    "optuna>=4.2.1",
    "pandas>=2.2.3",
    "pip>=25.0.1",
    "pydantic-settings>=2.8.1",
    "pytorch-tabnet>=4.1.0",
    "requests>=2.32.3",
    "scikit-learn>=1.5.2",
    "skore>=0.8.1",
    "skrub>=0.5.1",
]

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["churn_classification_engine"]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "ydata-profiling>=4.14.0",
]
